fix squish

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -62,6 +62,16 @@ td
       max-width: 960px
       margin: auto
 
+  .squish {
+    padding: 1rem 2rem 2rem 2rem;
+    max-width: 45rem;
+    margin: 0px auto;
+    text-align: right;
+    font-size: 1.25rem;
+  }
+
+  .squish h1 { text-align: center;}
+
 .page
   .tip,.warning,.danger
     box-shadow: 2px 3px 3px rgba(0,0,0,0.2)
